@@ -671,3 +671,6 @@
 
 [2024-04-13]
 - Added the script for the spell Imbue Crystal to make the quest The Stones of Vekh'nir give the item to every member of a group.
+
+[2024-04-17]
+- Added the script for the spell Bloodgem Infusion to make the quest Bloodgem Crystals complete for every member of a group.
